log

vi., 11 de mar. de 2022  1:16:21: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ef29c11
vi., 11 de mar. de 2022  1:21:02: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
c890455
vi., 11 de mar. de 2022  1:21:09: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
06d7afb
vi., 11 de mar. de 2022  1:21:29: 
test.c: In function 'suma':
test.c:250:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:272:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:250:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:8:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
In file included from test.c:5:0:
exercises.c:20:5: error: 'sumaN' defined but not used [-Werror=unused-function]
 int sumaN(int a[], int N) {
     ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
a0d2a5d
vi., 11 de mar. de 2022  1:42:05: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:42:4: error: 'totalCompleto' undeclared (first use in this function)
    totalCompleto = sumaN(a,n);
    ^~~~~~~~~~~~~
exercises.c:42:4: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:43:4: error: 'totalIncompleto' undeclared (first use in this function)
    totalIncompleto = sumaN(a,n-m);
    ^~~~~~~~~~~~~~~
Compilation failed
51aaa39
vi., 11 de mar. de 2022  1:42:32: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:42:4: error: 'totalCompleto' undeclared (first use in this function)
    totalCompleto = sumaN(a,n);
    ^~~~~~~~~~~~~
exercises.c:42:4: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:43:4: error: 'totalIncompleto' undeclared (first use in this function)
    totalIncompleto = sumaN(a,n-m);
    ^~~~~~~~~~~~~~~
Compilation failed
817b9d4
vi., 11 de mar. de 2022  1:42:54: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
337503a
vi., 11 de mar. de 2022  1:46:30: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:64:13: error: unused variable 'sujeto' [-Werror=unused-variable]
    Persona* sujeto = (Persona*) malloc(sizeof(Persona));
             ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3bc8f94
do., 13 de mar. de 2022  2:07:43: 
 exercises.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:66:24: error: assignment to expression with array type
    sujetoprt -> nombre = nombre;
                        ^
exercises.c:67:21: error: assignment to expression with array type
    sujetoprt -> rut = rut;
                     ^
Compilation failed
a04c0fc
do., 13 de mar. de 2022  2:08:55: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:66:24: error: assignment to expression with array type
    sujetoprt -> nombre = nombre;
                        ^
exercises.c:67:21: error: assignment to expression with array type
    sujetoprt -> rut = rut;
                     ^
exercises.c:71:11: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
    return "hola";
           ^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
28b1e51
do., 13 de mar. de 2022  2:09:20: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:66:24: error: assignment to expression with array type
    sujetoprt -> nombre = nombre;
                        ^
exercises.c:67:21: error: assignment to expression with array type
    sujetoprt -> rut = rut;
                     ^
Compilation failed
cd53fda
do., 13 de mar. de 2022  2:13:33: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:66:4: error: too few arguments to function 'strncpy'
    strncpy (sujetoprt -> nombre, nombre);
    ^~~~~~~
In file included from test.c:3:0:
c:\mingw\include\string.h:86:40: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  char *strncpy (char *, const char *, size_t);
                                        ^~~~~~~
In file included from test.c:5:0:
exercises.c:67:4: error: too few arguments to function 'strncpy'
    strncpy (sujetoprt -> rut, rut);
    ^~~~~~~
In file included from test.c:3:0:
c:\mingw\include\string.h:86:40: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  char *strncpy (char *, const char *, size_t);
                                        ^~~~~~~
Compilation failed
2239616
do., 13 de mar. de 2022  2:14:06: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
8299939
do., 13 de mar. de 2022  2:15:18: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:66:22: error: 'sujetoprt' is a pointer; did you mean to use '->'?
    strncpy (sujetoprt.nombre, nombre, 30);
                      ^
                      ->
exercises.c:67:22: error: 'sujetoprt' is a pointer; did you mean to use '->'?
    strncpy (sujetoprt.rut, rut, 11);
                      ^
                      ->
Compilation failed
dab0ee4
